--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,8 @@
                 align-items: center;
                 display: flex;
                 justify-content: space-between;
+                padding-left: 9px;
+                padding-right:9px;
             }
        </style>
 
@@ -23,7 +25,7 @@
     <body>
         <h1>Alerter</h1>
         <div id='container'>
-        Hello!
+        
         </div>
     </body>
 </html>
